# Model-level-Paper-EXP2

./: .gitignore
EXP1-Pre-Training/: README.md  pyproject.toml  requirements.txt
EXP1-Pre-Training/configs/base/: coeffs.yaml  data.yaml  eval.yaml  experiment.yaml  features.yaml  model.yaml  split.yaml  train.yaml  window.yaml
EXP1-Pre-Training/configs/debug/: debug_quick.yaml
EXP1-Pre-Training/configs/experiments/: exp_p0_baseline.yaml  exp_p0_formal_stable.yaml  exp_p1_lerp_vs_hermite.yaml  exp_p2_solver_compare.yaml  exp_p3_window_compare.yaml  exp_p4_target_transform.yaml  exp_p5_lolo.yaml
EXP1-Pre-Training/configs/tuning/: optuna_baseline.yaml
EXP1-Pre-Training/scripts/: 00_validate_data.py  01_prepare_dataframe.py  02_make_splits.py  03_build_windows.py  04_precompute_coeffs.py  05_train.py  06_evaluate.py  07_plot_results.py  08_tune_optuna.py  09_run_lolo_cv.py  99_smoke_test.py
EXP1-Pre-Training/src/lakeice_ncde/: __init__.py  app.py  config.py
EXP1-Pre-Training/src/lakeice_ncde/data/: __init__.py  coeffs.py  datasets.py  load_excel.py  scaling.py  schema.py  split.py  validate.py  windowing.py
EXP1-Pre-Training/src/lakeice_ncde/evaluation/: metrics.py  per_lake_summary.py  predict.py
EXP1-Pre-Training/src/lakeice_ncde/experiment/: registry.py  tracker.py
EXP1-Pre-Training/src/lakeice_ncde/models/: neural_cde.py
EXP1-Pre-Training/src/lakeice_ncde/training/: checkpoints.py  engine.py  history.py  losses.py  (+1 more)
EXP1-Pre-Training/tests/: conftest.py  test_metrics.py  test_model_forward.py  test_scaling.py  test_split.py  test_visualization.py
(+7 files in other folders)
